--- a/html/test.html
+++ b/html/test.html
@@ -12,17 +12,17 @@
         flex: 1 1 100px;
         align-self: center;
         ">A</div>
-        <div class="container-item" style="order: 3;
+        <div class="container-item" style="order: 5;
         flex: 1 3 100px;
         align-self: flex-end;
         ">B</div>
-        <div class="container-item" style="order: 5;
+        <div class="container-item" style="order: 3;
         flex: 5 1 100px;
         align-self: flex-start;
         ">C</div>
         <div class="container-item" style="order: 1;
         flex: 1 0 100px;
-        align-self: flex-start;
+        align-self: flex-end;
         ">D</div>
         <div class="container-item" style="order: 2;
         flex: 1 1 100px;
